<resources>
    <string name="app_name" translatable="false">Clash of Cards</string>
    <string name="email_login" translatable="false">Email</string>
    <string name="login_button_login" translatable="false">LOGIN</string>
    <string name="password_registration" translatable="false">Password</string>
    <string name="new_sign_up" translatable="false">Don\'t have an account?</string>
    <string name="forgot_password" translatable="false">Forgot password?</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="username" translatable="false">Username</string>
    <string name="register" translatable="false">Register</string>
    <string name="login" translatable="false">Login</string>
    <string name="register_button" translatable="false">REGISTER</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="facebook_application_id" translatable="false">2142106609268508</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2142106609268508</string>
    <string name="already_in" translatable="false">Already have an account?</string>
    <string name="birth_date" translatable="false">Birth Date</string>
    <string name="select_date_button" translatable="false">Select</string>
    <string name="todo" translatable="false">TODO</string>


    <string name="onboarding_slide1_title" translatable="false"></string>
    <string name="onboarding_slide1_subtitle" translatable="false"></string>
    <string name="onboarding_slide1_desc" translatable="false">modalità 1vs1 - Scanna i tuoi nemici</string>

    <string name="onboarding_slide2_title" translatable="false"></string>
    <string name="onboarding_slide2_subtitle" translatable="false"></string>
    <string name="onboarding_slide2_desc" translatable="false"> modalità </string>

    <string name="onboarding_slide3_title" translatable="false"></string>
    <string name="onboarding_slide3_subtitle" translatable="false"></string>
    <string name="onboarding_slide3_desc" translatable="false">modalità</string>

    <string name="onboarding_slide4_title" translatable="false"></string>
    <string name="onboarding_slide4_subtitle" translatable="false"></string>
    <string name="onboarding_slide4_desc" translatable="false">modalità</string>

    <string name="marketplace" translatable="false">Marketplace</string>
    <string name="deck" translatable="false">My Decks</string>
    <string name="Play" translatable="false">Play</string>

    <string name="sign_in" translatable="false">Sign In</string>
    <string name="remember_me" translatable="false">Remember me</string>
    <string name="new_user" translatable="false">New User?</string>
    <string name="invalid_username" translatable="false">Invalid username</string>
    <string name="invalid_password" translatable="false">Invalid password</string>

    <string name="home_screen_title" translatable="false">Home</string>
    <string name="home_screen_text" translatable="false">Can\'t walk? then fly!</string>
    <string name="previous" translatable="false">previous</string>

    <string name="store_name" translatable="false">Clash of Cards Marketplace</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="greater">Greater</string>
    <string name="lower">Lower</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="alina_smith">

        Alina Smith
    </string>
    <string name="hi_i_m_alin">

        Hi, I\'m Alina. I\u00E2\u0080\u0099m a UX/UI web and mobile designer with over 6 years of exp. in helping brands make it big.
    </string>
    <string name="waiting_for_n_an_opponent">Waiting for \n an opponent...</string>

</resources>