<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:ignore="ExtraText">


    <!-- android:text="@{viewmodel.email}" -->

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="345dp"
        android:
        android:autofillHints=""
        android:background="@drawable/login_email"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        android:paddingStart="82dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/edit_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/login_password"
        android:hint="@string/password_registration"
        android:inputType="textPassword"
        android:paddingStart="82dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/edit_login_email"
        app:layout_constraintStart_toStartOf="@+id/edit_login_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_email" />
    <!-- android:text="@{viewmodel.email}" -->

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_login"
        android:text="@string/login_button_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_login_password"
        app:layout_constraintStart_toStartOf="@+id/edit_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_login_password" />

    <TextView
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/new_sign_up"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/login_sign_up"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_up" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/facebook_button"
        app:layout_constraintStart_toStartOf="@+id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />

    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/google_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/google_button"
        app:layout_constraintTop_toBottomOf="@+id/google_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

