<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:clickable="false"
    android:visibility="visible">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/watch_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="dice_roll.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/waitingtext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/waiting_for_n_an_opponent"
        android:textColor="@color/orange"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/watch_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/turntext" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/lower"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLayout"
        app:layout_constraintVertical_bias="0.555" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardborder"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/view_container1"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997" />

        <ImageView
            android:id="@+id/view_container2"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="@+id/view_container1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view_container1"
            app:layout_constraintTop_toBottomOf="@+id/view_container1" />

        <ImageView
            android:id="@+id/view_container3"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="@+id/view_container2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view_container2"
            app:layout_constraintTop_toBottomOf="@+id/view_container2" />

        <ImageView
            android:id="@+id/view_container4"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="@+id/view_container3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view_container3"
            app:layout_constraintTop_toBottomOf="@+id/view_container3" />

        <ImageView
            android:id="@+id/view_container5"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view_container4"
            app:layout_constraintTop_toBottomOf="@+id/view_container4" />

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            android:foregroundGravity="center_vertical|clip_horizontal|center"
            android:scaleType="centerInside"
            android:src="@drawable/letter_a"
            app:layout_constraintBottom_toTopOf="@+id/cardTitleGame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardTitleGame"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Title Text"
            android:textAllCaps="true"
            android:textAppearance="@style/permalink"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardImage"
            app:layout_constraintStart_toStartOf="@+id/cardImage"
            app:layout_constraintTop_toBottomOf="@+id/cardImage" />

        <TextView
            android:id="@+id/attributename1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:clickable="false"
            android:gravity="start|center_horizontal"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/attributevalue1"
            app:layout_constraintEnd_toStartOf="@+id/attributevalue1"
            app:layout_constraintHorizontal_bias="0.5"

            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="@+id/attributevalue1" />

        <TextView
            android:id="@+id/attributevalue1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:clickable="false"
            android:gravity="center|center_horizontal"
            android:text="TextView"

            android:textAlignment="center"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attributename1"
            app:layout_constraintTop_toBottomOf="@+id/cardTitleGame" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            app:layout_constraintBottom_toBottomOf="@+id/attributename1"
            app:layout_constraintEnd_toStartOf="@+id/attributename1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attributename1"
            app:srcCompat="@drawable/arrow" />


        <TextView
            android:id="@+id/attributename2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:clickable="false"
            android:gravity="start|center_horizontal"
            android:text="TextView"

            android:textAlignment="viewStart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/attributevalue2"
            app:layout_constraintEnd_toStartOf="@+id/attributevalue2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/attributevalue2" />

        <TextView
            android:id="@+id/attributevalue2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:clickable="false"
            android:gravity="center|center_horizontal"
            android:text="TextView"

            android:textAlignment="center"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attributename2"
            app:layout_constraintTop_toBottomOf="@+id/attributevalue1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            app:layout_constraintBottom_toBottomOf="@+id/attributename2"
            app:layout_constraintEnd_toStartOf="@+id/attributename2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attributename2"
            app:srcCompat="@drawable/arrow" />


        <TextView
            android:id="@+id/attributename3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:clickable="false"
            android:gravity="start|center_horizontal"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="@+id/attributevalue3"
            app:layout_constraintEnd_toStartOf="@+id/attributevalue3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/attributevalue3" />

        <TextView
            android:id="@+id/attributevalue3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:clickable="false"
            android:gravity="center|center_horizontal"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/orange"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attributename3"
            app:layout_constraintTop_toBottomOf="@+id/attributevalue2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            app:layout_constraintBottom_toBottomOf="@+id/attributename3"
            app:layout_constraintEnd_toStartOf="@+id/attributename3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attributename3"
            app:srcCompat="@drawable/arrow" />


        <TextView
            android:id="@+id/attributename4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:clickable="false"
            android:gravity="start|center_horizontal"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="@+id/attributevalue4"
            app:layout_constraintEnd_toStartOf="@+id/attributevalue4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/attributevalue4" />

        <TextView
            android:id="@+id/attributevalue4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:clickable="false"
            android:gravity="center|center_horizontal"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/orange"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attributename4"
            app:layout_constraintTop_toBottomOf="@+id/attributevalue3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            app:layout_constraintBottom_toBottomOf="@+id/attributename4"
            app:layout_constraintEnd_toStartOf="@+id/attributename4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attributename4"
            app:srcCompat="@drawable/arrow" />


        <TextView
            android:id="@+id/attributename5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:clickable="false"
            android:gravity="start|center_horizontal"
            android:text="TextView"
            android:textAlignment="viewStart"
            android:textColor="@color/white"

            app:layout_constraintBottom_toBottomOf="@+id/attributevalue5"
            app:layout_constraintEnd_toStartOf="@+id/attributevalue5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/attributevalue5" />

        <TextView
            android:id="@+id/attributevalue5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:clickable="false"
            android:gravity="center|center_horizontal"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/attributename5"
            app:layout_constraintTop_toBottomOf="@+id/attributevalue4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"

            app:layout_constraintBottom_toBottomOf="@+id/attributename5"
            app:layout_constraintEnd_toStartOf="@+id/attributename5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attributename5"
            app:srcCompat="@drawable/arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/greater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/greater"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLayout"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/turntext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Title Text2"
        android:textAllCaps="true"
        android:textAppearance="@style/permalink"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/deck_shuffle"
        android:layout_width="89dp"
        android:layout_height="85dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:lottie_speed="1" />

    <TextView
        android:id="@+id/decksize"
        android:layout_width="51dp"
        android:layout_height="21dp"
        android:fontFamily="@font/bold"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/deck_shuffle"
        app:layout_constraintEnd_toEndOf="@+id/deck_shuffle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/deck_shuffle"
        app:layout_constraintTop_toTopOf="@+id/deck_shuffle"
        app:layout_constraintVertical_bias="0.421" />

</androidx.constraintlayout.widget.ConstraintLayout>